// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Removal Should remove a vertex 1`] = `
Object {
  "Point B": Object {
    "edges": Object {
      "Point C": Object {
        "name": "Point C",
        "payload": true,
      },
      "Point D": Object {
        "name": "Point D",
        "payload": true,
      },
    },
    "name": "Point B",
    "payload": true,
  },
  "Point C": Object {
    "edges": Object {
      "Point B": Object {
        "name": "Point B",
        "payload": false,
      },
    },
    "name": "Point C",
    "payload": false,
  },
  "Point D": Object {
    "edges": Object {
      "Point B": Object {
        "name": "Point B",
        "payload": false,
      },
    },
    "name": "Point D",
    "payload": false,
  },
}
`;

exports[`Removal should remove an edge 1`] = `
Object {
  "Point A": Object {
    "edges": Object {
      "Point C": Object {
        "name": "Point C",
        "payload": true,
      },
    },
    "name": "Point A",
    "payload": true,
  },
  "Point B": Object {
    "edges": Object {
      "Point C": Object {
        "name": "Point C",
        "payload": true,
      },
      "Point D": Object {
        "name": "Point D",
        "payload": true,
      },
    },
    "name": "Point B",
    "payload": true,
  },
  "Point C": Object {
    "edges": Object {
      "Point A": Object {
        "name": "Point A",
        "payload": false,
      },
      "Point B": Object {
        "name": "Point B",
        "payload": false,
      },
    },
    "name": "Point C",
    "payload": false,
  },
  "Point D": Object {
    "edges": Object {
      "Point B": Object {
        "name": "Point B",
        "payload": false,
      },
    },
    "name": "Point D",
    "payload": false,
  },
}
`;

exports[`Traversal Should do a Depth First Traversal 1`] = `
Array [
  "We are at Maine",
  "We are at New Hampshire and we came from Maine",
  "We are at Massachusetts and we came from New Hampshire",
  "We are at Connecticut and we came from Massachusetts",
  "We are at Rhode Island and we came from Connecticut",
  "We are at New York and we came from Connecticut",
  "We are at Vermont and we came from New York",
]
`;

exports[`Undirected Adjacency Graph Unit tests Add edges Should throw if we try to add to a non existent vertex 1`] = `"One or both of these vertices don't exist Point A / Point C"`;

exports[`Undirected Adjacency Graph Unit tests Should throw if we try to add to a non existent vertex 1`] = `"One or both of these vertices don't exist Point C / Point B"`;
